--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <package>${artifactId}</package>
+        <package>${project.artifactId}</package>
     </properties>
 
     <dependencies>
