--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,13 @@
             <version>4.0.16-alpha</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- OrgJSON for JSON parsing -->
+        <dependency>
+	    <groupId>org.json</groupId>
+	    <artifactId>json</artifactId>
+	    <version>20180130</version>
+	</dependency>
     </dependencies>
 
 
