--- a/pom.xml
+++ b/pom.xml
@@ -63,19 +63,18 @@
             <groupId>org.apache.xmlgraphics</groupId>
             <artifactId>batik-transcoder</artifactId>
             <version>1.13</version>
-
         </dependency>
 
         <dependency>
             <groupId>org.apache.xmlgraphics</groupId>
-            <artifactId>batik-bridge</artifactId>
-            <version>1.13</version>
+            <artifactId>xmlgraphics-commons</artifactId>
+            <version>2.4</version>
         </dependency>
 
         <dependency>
-            <groupId>org.apache.xmlgraphics</groupId>
-            <artifactId>batik-dom</artifactId>
-            <version>1.13</version>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.8.0</version>
         </dependency>
 
         <dependency>
@@ -156,6 +155,29 @@
                 </executions>
             </plugin>
 
+            <!-- Removing old Java service from dependency -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>truezip-maven-plugin</artifactId>
+                <version>1.2</version>
+                <executions>
+                    <execution>
+                        <id>remove-a-file-in-sub-archive</id>
+                        <goals>
+                            <goal>remove</goal>
+                        </goals>
+                        <phase>process-resources</phase>
+                        <configuration>
+                            <fileset>
+                                <directory>${user.home}/.m2/repository/org/apache/xmlgraphics/batik-script/1.13/batik-script-1.13.jar/META-INF/services</directory>
+                                <includes>
+                                    <include>org.apache.batik.script.InterpreterFactory</include>
+                                </includes>
+                            </fileset>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 </project>
