--- a/pom.xml
+++ b/pom.xml
@@ -169,7 +169,7 @@
                         <phase>process-resources</phase>
                         <configuration>
                             <fileset>
-                                <directory>${user.home}/.m2/repository/org/apache/xmlgraphics/batik-script/1.13/batik-script-1.13.jar/META-INF/services</directory>
+                                <directory>${settings.localRepository}/org/apache/xmlgraphics/batik-script/1.13/batik-script-1.13.jar/META-INF/services</directory>
                                 <includes>
                                     <include>org.apache.batik.script.InterpreterFactory</include>
                                 </includes>
