--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,16 @@
             <artifactId>javafx-fxml</artifactId>
             <version>14.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
+            <version>14.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-base</artifactId>
+            <version>14.0.1</version>
+        </dependency>
 
         <!-- Test with JUnit5 -->
         <dependency>
@@ -64,34 +74,6 @@
             <artifactId>batik-transcoder</artifactId>
             <version>1.13</version>
         </dependency>
-
-        <dependency>
-            <groupId>org.apache.xmlgraphics</groupId>
-            <artifactId>xmlgraphics-commons</artifactId>
-            <version>2.4</version>
-        </dependency>
-
-        <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>2.8.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>xalan</groupId>
-            <artifactId>xalan</artifactId>
-            <version>2.7.2</version>
-            <scope>provided</scope>
-        </dependency>
-
-
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-swing</artifactId>
-            <version>13</version>
-        </dependency>
-        <!-- Thanks for using https://jar-download.com -->
-
     </dependencies>
 
 
@@ -128,7 +110,7 @@
                 </configuration>
             </plugin>
 
-            <!--            Computing test coverage-->
+            <!-- Computing test coverage -->
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
