Change svg file, add coloring to map

--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,22 @@
             <artifactId>batik-transcoder</artifactId>
             <version>1.13</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.xmlgraphics/batik-swing -->
+        <dependency>
+            <groupId>org.apache.xmlgraphics</groupId>
+            <artifactId>batik-swing</artifactId>
+            <version>1.13</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.xmlgraphics/batik-svg-dom -->
+        <dependency>
+            <groupId>org.apache.xmlgraphics</groupId>
+            <artifactId>batik-svg-dom</artifactId>
+            <version>1.13</version>
+        </dependency>
+
+
     </dependencies>
 
 
