--- a/globingular/pom.xml
+++ b/globingular/pom.xml
@@ -98,7 +98,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.4</version>
                 <configuration>
-                    <mainClass>${package}.App</mainClass>
+                    <mainClass>${package}.ui.App</mainClass>
                 </configuration>
             </plugin>
 
