--- a/globingular/pom.xml
+++ b/globingular/pom.xml
@@ -193,6 +193,20 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <!-- SpotBugs for checking code quality and bugs-->
+            <plugin>
+                <groupId>com.github.spotbugs</groupId>
+                <artifactId>spotbugs-maven-plugin</artifactId>
+                <version>4.0.4</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.github.spotbugs</groupId>
+                        <artifactId>spotbugs</artifactId>
+                        <version>4.1.3</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
         </plugins>
     </build>
 </project>
