Add Maven Checkstyle plugin in pom.xml

--- a/globingular/pom.xml
+++ b/globingular/pom.xml
@@ -207,6 +207,16 @@
                     </dependency>
                 </dependencies>
             </plugin>
+
+            <!-- Maven Checkstyle for code quality check-->
+            <plugin>
+	            <groupId>org.apache.maven.plugins</groupId>
+	            <artifactId>maven-checkstyle-plugin</artifactId>
+	            <version>3.0.0</version>
+	            <configuration>
+	                <configLocation>checkstyle.xml</configLocation>
+	            </configuration>
+	        </plugin>
         </plugins>
     </build>
 </project>
