--- a/globingular/pom.xml
+++ b/globingular/pom.xml
@@ -214,22 +214,22 @@
 	            <artifactId>maven-checkstyle-plugin</artifactId>
 	            <version>3.1.1</version>
 	            <configuration>
-                    <configLocation>sun_checks.xml</configLocation>
+                    <configLocation>../checkstyle.xml</configLocation>
 	            </configuration>
 	        </plugin>
         </plugins>
     </build>
 
     <reporting>
-	        <plugins>
-	            <plugin>
-	                <groupId>org.apache.maven.plugins</groupId>
-	                <artifactId>maven-checkstyle-plugin</artifactId>
-	                <version>3.1.1</version>
-	                <configuration>
-	                    <configLocation>sun_checks.xml</configLocation>
-	                </configuration>
-	            </plugin>
-	        </plugins>
-	    </reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>3.1.1</version>
+                <configuration>
+                    <configLocation>../checkstyle.xml</configLocation>
+                </configuration>
+            </plugin>
+        </plugins>
+    </reporting>
 </project>
