--- a/globingular/core/pom.xml
+++ b/globingular/core/pom.xml
@@ -1,5 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    
     <parent>
         <groupId>it1901_gr2002.globingular</groupId>
         <artifactId>parent</artifactId>
@@ -9,6 +10,13 @@
     <artifactId>core</artifactId>
 
     <dependencies>
+        <!-- Globingular UI module -->
+        <dependency>
+            <groupId>it1901_gr2002.globingular</groupId>
+            <artifactId>ui</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
         <!-- JavaFX -->
         <dependency>
             <groupId>org.openjfx</groupId>
@@ -129,7 +137,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
-                <version>3.9.1</version>
             </plugin>
         </plugins>
     </build>
