Complete physical modularization
Note: Since javafx:run is only a plugin of module globingular.ui,
`mvn javafx:run` will not be recognized. Until an alternate launch goal is
created, use `mvn javafx:run -pl globingular.ui` to force plugin module.
Currently, the site-goal does not aggregate the individual reports, and
generally seems to not work.
Also, CI test is failing as Jacoco no longer outputs to the same directory.

--- a/globingular/globingular.core/pom.xml
+++ b/globingular/globingular.core/pom.xml
@@ -2,12 +2,12 @@
     <modelVersion>4.0.0</modelVersion>
     
     <parent>
-        <groupId>it1901_gr2002.globingular</groupId>
+        <groupId>it1901_gr2002</groupId>
         <artifactId>parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>persistance</artifactId>
+    <artifactId>globingular.core</artifactId>
 
     <dependencies>
         <!-- JavaFX -->
@@ -114,12 +114,6 @@
                 <artifactId>jacoco-maven-plugin</artifactId>
             </plugin>
 
-            <!-- Using latest maven-site-plugin for report generation -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-site-plugin</artifactId>
-            </plugin>
-
             <!-- SpotBugs for checking code quality and bugs-->
             <plugin>
                 <groupId>com.github.spotbugs</groupId>
@@ -130,6 +124,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
+            </plugin>
+
+            <!-- Using latest maven-site-plugin for report generation -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
