--- a/globingular/globingular.ui/pom.xml
+++ b/globingular/globingular.ui/pom.xml
@@ -2,18 +2,25 @@
     <modelVersion>4.0.0</modelVersion>
     
     <parent>
-        <groupId>it1901_gr2002.globingular</groupId>
+        <groupId>it1901_gr2002</groupId>
         <artifactId>parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>ui</artifactId>
+    <artifactId>globingular.ui</artifactId>
 
     <dependencies>
         <!-- Globingular core module -->
         <dependency>
-            <groupId>it1901_gr2002.globingular</groupId>
-            <artifactId>core</artifactId>
+            <groupId>it1901_gr2002</groupId>
+            <artifactId>globingular.core</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <!-- Globingular persistence module -->
+        <dependency>
+            <groupId>it1901_gr2002</groupId>
+            <artifactId>globingular.persistence</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
@@ -121,7 +128,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.4</version>
                 <configuration>
-                    <mainClass>${package}.ui.App</mainClass>
+                    <mainClass>${package}.App</mainClass>
                 </configuration>
             </plugin>
 
