--- a/globingular/pom.xml
+++ b/globingular/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>it1901_gr2002.globingular</groupId>
+    <groupId>it1901_gr2002</groupId>
     <artifactId>parent</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
@@ -107,9 +107,9 @@
     </build>
 
     <modules>
-        <module>core</module>
-        <module>ui</module>
-        <module>persistance</module>
+        <module>globingular.ui</module>
+        <module>globingular.persistence</module>
+        <module>globingular.core</module>
     </modules>
 
     <reporting>
