Change 'mvn clean' to use Java system properties To access the users home directory

--- a/globingular/pom.xml
+++ b/globingular/pom.xml
@@ -241,7 +241,7 @@
                 <configuration>
                     <filesets>
                         <fileset>
-                            <directory>${env.USERPROFILE}/temp</directory>
+                            <directory>${user.home}/temp/globingular</directory>
                             <followSymlinks>false</followSymlinks>
                         </fileset>
                     </filesets>
