Set Maven to show and fail on warnings and warn about use of deprecated code

--- a/globingular/pom.xml
+++ b/globingular/pom.xml
@@ -104,6 +104,9 @@
                 <configuration>
                     <encoding>UTF-8</encoding>
                     <release>14</release>
+                    <showDeprecation>true</showDeprecation>
+                    <showWarnings>true</showWarnings>
+                    <failOnWarning>true</failOnWarning>
                 </configuration>
             </plugin>
 
