Change groupID, module and package names

--- a/globingular/pom.xml
+++ b/globingular/pom.xml
@@ -1,13 +1,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>it1901_gr2002</groupId>
+    <groupId>it1901.gr2002.globingular</groupId>
     <artifactId>parent</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
+    <modules>
+        <module>ui</module>
+        <module>persistence</module>
+        <module>core</module>
+    </modules>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <package>${project.artifactId}</package>
+        <package>${project.groupId}.${project.artifactId}</package>
     </properties>
 
     <build>
@@ -106,11 +112,6 @@
         </pluginManagement>
     </build>
 
-    <modules>
-        <module>globingular.ui</module>
-        <module>globingular.persistence</module>
-        <module>globingular.core</module>
-    </modules>
 
     <reporting>
         <plugins>
