Unite reporting output directories for modules
Reassign submodules reporting outputs to use parent's site-folder

--- a/globingular/persistence/pom.xml
+++ b/globingular/persistence/pom.xml
@@ -142,6 +142,7 @@
     </build>
 
     <reporting>
+        <outputDirectory>${project.basedir}/../target/site/${project.artifactId}</outputDirectory>
         <plugins>
             <!-- Project report plugin -->
             <plugin>
