--- a/globingular/core/pom.xml
+++ b/globingular/core/pom.xml
@@ -135,6 +135,7 @@
     </build>
 
     <reporting>
+        <outputDirectory>${project.basedir}/../target/site/${project.artifactId}</outputDirectory>
         <plugins>
             <!-- Project report plugin -->
             <plugin>
