--- a/globingular/ui/pom.xml
+++ b/globingular/ui/pom.xml
@@ -198,6 +198,7 @@
     </build>
 
     <reporting>
+        <outputDirectory>${project.basedir}/../target/site/${project.artifactId}</outputDirectory>
         <plugins>
             <!-- Project report plugin -->
             <plugin>
