Generate Jacoco reports for every module individually

--- a/globingular/pom.xml
+++ b/globingular/pom.xml
@@ -165,10 +165,15 @@
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.5</version>
-                <configuration>
-                    <destFile>${basedir}/target/coverage-reports/jacoco-unit.exec</destFile>
-                    <dataFile>${basedir}/target/coverage-reports/jacoco-unit.exec</dataFile>
-                </configuration>
+                <!-- Generate Jacoco-reports for each sub-module by inheritance -->
+                <reportSets>
+                    <reportSet>
+                        <id>report-subs</id>
+                        <reports>
+                            <report>report</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
             </plugin>
 
             <!-- SpotBugs for checking code quality and bugs-->
