--- a/globingular/persistence/pom.xml
+++ b/globingular/persistence/pom.xml
@@ -142,7 +142,7 @@
     </build>
 
     <reporting>
-        <outputDirectory>${project.basedir}/../target/site/${project.artifactId}</outputDirectory>
+        <!--<outputDirectory>${project.basedir}/../target/site/${project.artifactId}</outputDirectory>-->
         <plugins>
             <!-- Project report plugin -->
             <plugin>
