--- a/globingular/pom.xml
+++ b/globingular/pom.xml
@@ -7,6 +7,7 @@
 
     <modules>
         <module>ui</module>
+        <module>persistence</module>
         <module>core</module>
         <module>aggregator</module>
     </modules>
