i26/Automatically deploy Maven site with reports from master branch to accessible webserver

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,3 +50,14 @@ spotbugs:
   script:
     - 'cd globingular'
     - 'mvn $MAVEN_CLI_OPTS compile spotbugs:check'
+
+pages:
+  only:
+    - master
+  script:
+    - 'cd globingular'
+    - 'mvn $MAVEN_CLI_OPTS site'
+    - 'mv target/staging ../public'
+  artifacts:
+    paths:
+      - public
